--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,3 +25,11 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.report-style-class {
+  height: 500px;
+  width: 100%;
+}
+.App {
+  text-align: center;
+}
